was able to get the users input so the api knows what to look for, I also was able to display the information about the anime

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
             <h1>Anime Finder</h1>
                 <div>
                     <input type="text" name="currentAnimeChosen" id="currentAnimeInput">
-                    <button type="submit" id="currentAnimeButton" onclick="currentAnimeInputValue()">Click me!</button>
+                    <button type="submit" id="currentAnimeButton">Click me!</button>
+                </div>
+
+                <div id="info-container">
+                    
                 </div>
     </main>
 
